syntax = "proto3";
option go_package = "github.com/shijuvar/go-distsys/gokitdemo/services/account/transport/pb";

package pb;

service Account {
    rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerResponse) {}
}

message CreateCustomerRequest  {
string email =1;
string password =2;
string phone =3;
}

message CreateCustomerResponse {
}
